# Annuaire

./: .gitignore  AGENTS.md  AI_GENERAL_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  awake.py  create_venv.bat  create_venv.command  create_venv.sh  export_project.py  name_search_app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.command  run_app.sh  run_name_search.bat  update_project.bat  update_project.command
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: CLAUDE.md  CODEMAP.md  CONVENTIONS.md
dormant/: README.md
scripts/: export_project.py  update_changelog.py  update_project.py
src/: __init__.py  config.py  data_manifest.py  datagouv_client.py  download_utils.py  export_utils.py  io_utils.py  pipeline.py  sirene_queries.py  sirene_schema.py  siret_utils.py  ui_helpers.py  updater.py  version_check.py
tests/: test_config.py  test_data_manifest.py  test_sirene_schema.py  test_siret_utils.py  test_updater.py  test_version_check.py
