[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "annuaire-sirene"
description = "Application locale Streamlit de contrôle et d'enrichissement de SIRET/SIREN à partir des fichiers SIRENE Parquet."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "streamlit>=1.40,<2",
    "duckdb>=1.1,<2",
    "pandas>=2.1,<3",
    "openpyxl>=3.1,<4",
    "pyarrow>=15,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6",
]

[tool.setuptools]
# Le code applicatif vit dans src/ ; app.py reste l'entrypoint Streamlit à la racine.
packages = ["src"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
