[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "annuaire-sirene"
description = "Application locale Streamlit de contrôle et d'enrichissement de SIRET/SIREN à partir des fichiers SIRENE Parquet."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "streamlit>=1.40,<2",
    "duckdb>=1.1,<2",
    "pandas>=2.1,<3",
    "openpyxl>=3.1,<4",
    "pyarrow>=15,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools]
# Le code applicatif vit dans src/ ; app.py reste l'entrypoint Streamlit à la racine.
packages = ["src"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
# 3.12 et non 3.11 (plancher du projet) : les stubs livres par numpy utilisent la syntaxe
# `type` de 3.12, que mypy refuse de parser sous une cible plus basse. La compatibilite
# syntaxique avec 3.11 reste couverte par `target-version = "py311"` de ruff.
python_version = "3.12"
files = ["src", "app.py"]
# streamlit / duckdb / openpyxl ne publient pas de stubs exploitables : sans cette
# option mypy échouerait sur les imports plutôt que sur le code du projet.
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
